# pyspark-python-etl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test_unittest.yaml
simplepyetl/: __init__.py  simple_dataframe_operations.py
tests/: test_simple_dataframe_operations.py
